change the content of quote

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <!-- quote section -->
 
     <div class="quote-container">
-        <p>"When the time is right, I the Lord will make it happen"</p>
+        <p>"When the time is right. I, the Lord, will make it happen"</p>
         <div class="author">-Isaiah 60:22</div>
     </div>
 
